# nitro-enclaves-cosign-sandbox

./: Dockerfile
.github/workflows/: build-and-sign-image.yaml
enclave/: Dockerfile  run.sh
enclave/app/: Cargo.toml
enclave/app/src/: encryption.rs  http.rs  main.rs
